--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Expanded Binary Notation Tool</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Number Representation Tool</title>
   <style>
     body {
       font-family: Arial, sans-serif;
     }
     .container {
-      max-width: 400px;
+      max-width: 500px;
       margin: 0 auto;
       padding: 20px;
       border: 1px solid #ccc;
@@ -19,7 +19,7 @@
       display: block;
       margin-bottom: 5px;
     }
-    input[type="text"] {
+    input[type="text"], select {
       width: calc(100% - 24px);
       padding: 12px;
       margin-bottom: 10px;
@@ -33,21 +33,22 @@
       border-radius: 3px;
       word-break: break-word;
     }
-    .toggle-option {
-      margin-bottom: 10px;
-    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>Expanded Binary Notation Tool</h2>
+    <h2>Number Representation Tool</h2>
+    
     <label for="input-number">Input Number:</label>
     <input type="text" id="input-number" placeholder="Enter number">
 
-    <div class="toggle-option">
-      <input type="checkbox" id="show-powers">
-      <label for="show-powers">Show as powers of 2 (e.g. 2^12)</label>
-    </div>
+    <label for="mode-select">Select Format:</label>
+    <select id="mode-select">
+      <option value="scientific">Scientific Notation</option>
+      <option value="binary-values">Expanded Binary Notation</option>
+      <option value="sqrt-notation">Square Root Notation (√output)</option>
+      <option value="square-root">Square Notation (√input)</option>
+    </select>
 
     <div class="result" id="result"></div>
   </div>
@@ -57,40 +58,76 @@
       return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
     }
 
-    function generateExpandedBinaryNotation() {
-      let input = document.getElementById('input-number').value.replace(/,/g, "");
-      let resultDiv = document.getElementById('result');
-      let showPowers = document.getElementById('show-powers').checked;
+    function formatScientificNotation(num) {
+      const n = Number(num);
+      if (n === 0) return "0";
 
-      if (isNaN(input) || input.trim() === "" || Number(input) < 0) {
-        resultDiv.innerText = "Please enter a valid non-negative number.";
-        return;
-      }
+      const exponent = Math.floor(Math.log10(Math.abs(n)));
+      const rawMantissa = n / Math.pow(10, exponent);
+      let mantissa = rawMantissa.toFixed(3).replace(/\.?0+$/, '');
+      return `${mantissa}x10^${exponent}`;
+    }
 
+    function generateExpandedBinaryNotation(input) {
       let num = BigInt(input);
-      if (num === 0n) {
-        resultDiv.innerText = "0";
-        return;
-      }
+      if (num === 0n) return "0";
 
       let parts = [];
       let power = 0n;
       while ((1n << power) <= num) {
         if ((num & (1n << power)) !== 0n) {
-          if (showPowers) {
-            parts.unshift(`2^${power.toString()}`);
-          } else {
-            parts.unshift(numberWithCommas((1n << power).toString()));
-          }
+          parts.unshift(numberWithCommas((1n << power).toString()));
         }
         power++;
       }
-
-      resultDiv.innerText = parts.join(" + ");
+      return parts.join(" + ");
     }
 
-    document.getElementById('input-number').addEventListener('input', generateExpandedBinaryNotation);
-    document.getElementById('show-powers').addEventListener('change', generateExpandedBinaryNotation);
+    function squareRootNotation(input) {
+      // output: √(input^2)
+      const n = Number(input);
+      if (n === 0) return "0";
+      const squared = n * n;
+      return `√${numberWithCommas(squared.toString())}`;
+    }
+
+    function squareRootOfInput(input) {
+      const n = Number(input);
+      if (n < 0) return "Square root undefined for negative numbers.";
+      return Math.sqrt(n).toString();
+    }
+
+    function updateResult() {
+      const inputRaw = document.getElementById('input-number').value.replace(/,/g, '');
+      const mode = document.getElementById('mode-select').value;
+      const resultDiv = document.getElementById('result');
+
+      if (inputRaw.trim() === '' || isNaN(inputRaw) || Number(inputRaw) < 0 && mode !== "sqrt-notation") {
+        resultDiv.innerText = "Please enter a valid non-negative number.";
+        return;
+      }
+
+      let output = '';
+      switch (mode) {
+        case "scientific":
+          output = formatScientificNotation(inputRaw);
+          break;
+        case "binary-values":
+          output = generateExpandedBinaryNotation(inputRaw);
+          break;
+        case "sqrt-notation":
+          output = squareRootNotation(inputRaw);
+          break;
+        case "square-root":
+          output = squareRootOfInput(inputRaw);
+          break;
+      }
+
+      resultDiv.innerText = output;
+    }
+
+    document.getElementById('input-number').addEventListener('input', updateResult);
+    document.getElementById('mode-select').addEventListener('change', updateResult);
   </script>
 </body>
 </html>
